# speedtest-dashboard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Run commands for Speedtest.txt  RunSpeedTest.bat  RunSpeedTest.ps1  collector.py  dashboard.py  generate_dummy_history.py  normalize_csv.py  pyproject.toml  requirements.txt  setup_venv.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Baseline/: collector.py  dashboard.py  requirements.txt
docs/wiki/: Configuration.md  Credits.md  Customization.md  Getting-Started.md  Home.md  Roadmap.md  Running-the-Dashboard.md  SUMMARY.md  Troubleshooting.md
src/speedtest_dashboard/: collector_app.py  dashboard_app.py  runner.py
